--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -48,3 +48,11 @@ body {
     margin: 0px;
   }
 }
+
+.jumbotron {
+  background-image: url('banner.jpg');
+  h1, h2 {
+    font-family: guardian-egyptt, georgia, serif;
+    color: #F5F5F1;
+  }
+}
