change link for banner image to use dropbox

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -50,7 +50,7 @@ body {
 }
 
 .jumbotron {
-  background-image: url('banner.jpg');
+  background-image: url('https://www.dropbox.com/s/mc558ersl5lzy2h/banner.jpg?raw=1');
   h1, h2 {
     font-family: guardian-egyptt, georgia, serif;
     color: #F5F5F1;
